Ajout de l'interface des résultats
Ajout de l'interface des résultats, suppression des fichiers inutiles et
ajout de lignes pour inclure les fichiers dans le package DB
correctement dans le projet.

--- a/res/layout/players_layout.xml
+++ b/res/layout/players_layout.xml
@@ -3,6 +3,15 @@
     android:layout_width="fill_parent" android:layout_height="fill_parent"  
     android:orientation="vertical">
     
+    <TableRow android:id="@+id/score_row"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dip">
+        
+        <TextView android:id="@+id/score_text"/>
+        
+    </TableRow>
+    
     <TableRow android:id="@+id/player1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
